resources/css/style.css
html {
  font-size: 18px;
  line-height: 1.4;
}

/* Header */

header {
  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/glasses-bg.png");
  background-repeat: no-repeat;
  background-size: cover;
  height: 30rem;
  width: 100%;
  margin-top: 0;
}

.banner {
  display: flex;
  align-items: center;
  width: 960px;
  margin: 0 auto;
  background-color: cadetblue;
  color: white;
}

.logo {
  display: inline-flex;
  font-family: Helvetica;
  font-size: 1rem;
  width: 960px;
  margin: 0 auto;
}

.logo img {
  padding-left: 2rem;
  padding-right: 1rem;
  height: 1.5rem;
}

nav {
  font-family: Helvetica;
  font-size: 1rem;
  display: flex;
  justify-content: flex-end;
}

nav span {
  padding-right: 2rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.tag {
  display: flex;
  justify-content: flex-end;
  padding-top: 10rem;
  font-family: Helvetica;
  font-weight: bold;
  font-size: 2rem;
  line-height: 1.2;
}

.tag span {
  background-color: white;
  padding: 1.5rem 5rem;
}

